src/test/ui/span/regionck-unboxed-closure-lifetimes.nll.stderr
error[E0597]: `c` does not live long enough
  --> $DIR/regionck-unboxed-closure-lifetimes.rs:17:21
   |
LL |         let c_ref = &c;
   |                     ^^ borrowed value does not live long enough
...
LL |     }
   |     - borrowed value only lives until here
LL |     f.use_mut();
   |     - borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
